2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* dfp/math.h (roundeven32): Add prototype.
	(__roundevend32): Likewise.
	(roundeven64): Likewise.
	(__roundeven64): Likewise.
	(roundeven128): Likewise.
	(__roundeven128): Likewise.
	* ieee754r/Makefile: Add roundeven[32|64|128] objects.
	* ieee754r/Versions (LIBDFP_1.0.9): Add roundeven symbols.
	* ieee754r/roundevend128.c: New file: roundevend128 software
	implementation.
	* ieee754r/roundevend32.c: New file: roundevend32 software
	implementation.
	* ieee754r/roundevend64.c: New file: roundevend64 software
	implementation.
	* tests/test-rounding.c: Add roundeven tests.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/roundd128.c: New file: roundd128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/roundd32.c: New file: roundd64 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/roundd64.c: New file: roundd32 optimized
	implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/nearbyintd128.c: New file: nearbyintd128
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/nearbyintd32.c: New file: nearbyintd64
	optimized implementation for PowerPC.
	* sysdeps/powerpc/dfpu/nearbyintd64.c: New file: nearbyintd32
	optimized implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/floord128.c: New file: floord128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/floord32.c: New file: floord64 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/floord64.c: New file: floord32 optimized
	implementation for PowerPC.

2013-02-09  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/dfpu/truncd128.c: New file: truncd128 optimized
	implementation for PowerPC.
	* sysdeps/powerpc/dfpu/truncd32.c: New file: truncd64 optimized
	implementation for PowerPC.